--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,8 @@ body{
     color: white;
     padding: 20px 10px;
     padding-top: 6rem;
+    background-size:auto;
+    background-repeat: no-repeat;
 }
 :root{
     --vs-border-radius:3px;
