--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -16,10 +16,9 @@
         }
     }
     .music{
-        display: flex;
-        justify-content: center;
         margin-top: 5rem;
-        margin-right: 1rem;
+        text-align: center;
+
     }
     .nexts{
         margin-top: 5rem;
